# ardupilot-companion

./: CMakeLists.txt  readme.md
drone_scripts/: delivery_mission.lua
src/: offboard_control.cpp
